aplicacion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-mundo-nginx
  namespace: hola-mundo-nginx
  labels:
    app: hola-mundo-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hola-mundo-nginx
  template:
    metadata:
      labels:
        app: hola-mundo-nginx
    spec:
      containers:
      - name: hola-mundo-nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: nginx-config
          mountPath: /usr/share/nginx/html
          subPath: index.html
      volumes:
      - name: nginx-config
        configMap:
          name: hola-mundo-nginx-config
