aplicacion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hola-mundo-nginx
  namespace: hola-mundo-nginx 
spec:
  selector:
    app: hola-mundo-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
