aplicacion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hola-mundo-nginx
  namespace: hola-mundo-nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:    
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hola-mundo-nginx
            port:
              number: 80
